# AETHER-AI-Frontend-Proj

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
aether-backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
aether-backend/app/: config.py  database.py  main.py
aether-backend/app/agents/: graph.py  memory_agent.py  reasoning_agent.py  router_agent.py  safety_agent.py  state.py  synthesis_agent.py  tool_agent.py
aether-backend/app/core/: cache.py  embeddings.py  llm.py
aether-backend/app/models/: __init__.py
aether-backend/app/routers/: auth.py  chat.py  documents.py  memory.py
aether-backend/app/services/: auth_service.py  document_service.py  memory_service.py
aether-backend/app/tools/: registry.py
aether-backend/app/workers/: celery_app.py
aether-backend/data/minio/.minio.sys/: format.json
aether-backend/data/qdrant/: raft_state.json
api/: chat.ts
config/: models.ts
server/: index.ts
src/: App.tsx  custom-markdown.css  firebase.ts  index.css
src/components/: ArchitectureSection.tsx  ChatDemo.tsx  FeaturesSection.tsx  FileAttachmentCard.tsx  FooterSection.tsx  FounderSection.tsx  GlassNavbar.tsx  HeroSection.tsx  PricingSection.tsx  ReviewsSection.tsx
src/contexts/: AuthContext.tsx
src/pages/: ChatPage.tsx  LoginPage.tsx
src/services/: emailService.ts
src/utils/: fileParser.ts
