[project]
name = "aether-backend"
version = "0.1.0"
description = "Autonomous Enterprise Intelligence Backend for Aether AI"
# readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.27",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "redis>=5.0.1",
    "qdrant-client>=1.8.0",
    "langgraph>=0.0.30",
    "langchain>=0.1.11",
    "langchain-google-vertexai>=0.0.10",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "celery>=5.3.6",
    "apscheduler>=3.10.4",
    "opentelemetry-api>=1.23.0",
    "opentelemetry-sdk>=1.23.0",
    "opentelemetry-instrumentation-fastapi>=0.44b0",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "minio>=7.2.5",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "black>=24.2.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
